# My_First_Python_PyPI_Package

./: README.md  pyproject.toml
src/cheshirecat/: __init__.py
src/example_package_ch35hireC4t/: __init__.py  example.py
