[project]
name = "example_package_ch35hireC4t"
version = "0.0.1"
authors = [
  { name="ch35hireC4t", email="sim.teich@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SimchaTeich/My_First_Python_PyPI_Package"
#"Bug Tracker" = ""
